<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginBottom="1dp"
        android:background="@color/violeta"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutMensajes1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/nombreChat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:text="@string/tatiana"
            android:textColor="@color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="24dp"
            app:srcCompat="@drawable/woman"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />




    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout

        android:id="@+id/linearLayoutMensajes1"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        tools:layout_editor_absoluteX="1dp">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/woman"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:text="@string/a_donde_quieres_recorres_este_fin_de_semana"
            />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/linearLayoutMensajes2"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutMensajes1"
        tools:layout_editor_absoluteX="1dp">
        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:gravity="end"
            android:text="@string/vamos_al_parque_simon_bolivar"
            />
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/boy"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMensajes3"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutMensajes2"
        tools:layout_editor_absoluteX="1dp">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/woman"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:text="@string/buena_idea"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMensajes4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="13dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutMensajes3"
        tools:layout_editor_absoluteX="1dp">
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            app:srcCompat="@drawable/woman"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="30dp"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:text="@string/asi_exploramos_un_poco_los_alrededores"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutMensajes5"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="13dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutMensajes4"
        tools:layout_editor_absoluteX="1dp">
        <TextView
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            android:textSize="16sp"
            android:fontFamily="@font/inter"
            android:gravity="end"
            android:text="@string/y_podemos_llevar_los_botilitos_que_compramos_ayer"
            />
        <ImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/boy"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/botonAgregarRecursos"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/transparent"
            android:text="@string/plus"
            android:textColor="@color/violeta"
            android:textSize="35sp" />

        <EditText
            android:id="@+id/editTextText"
            android:layout_width="355dp"
            android:layout_height="35dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rounded_rectangle_background"
            android:ems="10"
            android:hint="@string/escribe_un_mensaje"
            android:inputType="text" />


        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="54dp"
            android:layout_height="52dp"
            android:scaleType="centerCrop"
            android:padding="12dp"
            app:srcCompat="@drawable/send_icon"
            android:background = "@drawable/circulo_enviar"
            />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>